# mcpforge

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_hello_world.py  02_market_tools.py
mcpforge/: __init__.py  __main__.py  cli.py  decorator.py  schema.py  server.py  types.py
mcpforge/builtin/: __init__.py  filesystem.py  http.py
tests/: test_decorator.py  test_schema.py  test_server.py
