[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpforge"
version = "0.1.0"
description = "Ship an MCP server in 5 lines of Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "thechifura" },
]
keywords = ["mcp", "model-context-protocol", "ai", "tools", "claude", "cursor", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
http = [
    "uvicorn>=0.30",
    "starlette>=0.40",
]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://github.com/vigilancetrent/mcpforge"
Repository = "https://github.com/vigilancetrent/mcpforge"
Issues = "https://github.com/vigilancetrent/mcpforge/issues"

[project.scripts]
mcpforge = "mcpforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcpforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
